fix(core): `Textfield` straighten up icons spacings

--- a/projects/core/components/scroll-controls/scroll-controls.style.less
+++ b/projects/core/components/scroll-controls/scroll-controls.style.less
@@ -14,8 +14,6 @@
     max-width: calc(100% - 1px);
     max-height: calc(100% - 1px);
     float: left;
-    margin-right: calc(-100% + 1px);
-    margin-inline-start: 0;
     margin-inline-end: calc(-100% + 1px);
     pointer-events: none;
 }
