--- a/projects/core/styles/mixins/textfield.less
+++ b/projects/core/styles/mixins/textfield.less
@@ -1,11 +1,9 @@
-@line-height-l: 1.25rem;
-
 .textfield-host() {
     .text-basic();
     position: relative;
     display: block;
-    border-radius: var(--tui-radius-m);
     text-align: left;
+    border-radius: var(--tui-radius-m);
     height: var(--tui-height);
     min-height: var(--tui-height);
     max-height: var(--tui-height);
@@ -21,7 +19,7 @@
     &[data-size='l'] {
         --tui-height: var(--tui-height-l);
         font: var(--tui-font-text-m);
-        line-height: @line-height-l;
+        line-height: 1.25rem;
     }
 }
 
@@ -29,7 +27,6 @@
     display: flex;
     height: 100%;
     width: 100%;
-    padding: 0 var(--tui-padding-m);
     box-sizing: border-box;
     align-items: center;
     overflow: hidden;
@@ -38,17 +35,12 @@
         padding: 0 var(--tui-padding-s);
     }
 
+    :host[data-size='m'] & {
+        padding: 0 var(--tui-padding-m);
+    }
+
     :host[data-size='l'] & {
         padding: 0 var(--tui-padding-l);
-    }
-
-    &:after {
-        content: '';
-        margin-right: -0.25rem;
-    }
-
-    :host[data-size='m'] &:after {
-        display: none;
     }
 }
 
@@ -56,9 +48,7 @@
     .text-basic();
     .clearinput();
     .fullsize();
-    padding: 0 var(--tui-padding-m);
     border: solid transparent;
-    border-width: 0 var(--border-end, 0) 0 var(--border-start, 0);
     border-inline-start-width: var(--border-start, 0);
     border-inline-end-width: var(--border-end, 0);
     text-indent: var(--text-indent);
@@ -114,6 +104,12 @@
         padding: 0 var(--tui-padding-s);
     }
 
+    :host[data-size='m'] &,
+    :host-context(tui-primitive-textfield[data-size='m']):not(tui-primitive-textfield),
+    :host-context(tui-text-area[data-size='m']):not(tui-text-area) {
+        padding: 0 var(--tui-padding-m);
+    }
+
     :host[data-size='l'] &,
     :host-context(tui-primitive-textfield[data-size='l']):not(tui-primitive-textfield),
     :host-context(tui-text-area[data-size='l']):not(tui-text-area) {
@@ -129,7 +125,7 @@
 
     :host[data-size='l']:not(._label-outside) &,
     :host-context(tui-primitive-textfield[data-size='l']:not(._label-outside)):not(tui-primitive-textfield) {
-        padding-top: @line-height-l;
+        padding-top: 1.25rem;
 
         // Workaround for raising placeholder in temporary autofill
         &:-webkit-autofill + .t-content .t-placeholder {
@@ -160,15 +156,10 @@
 .textfield-wrapper() {
     flex: 1;
     min-width: 0;
-    padding-right: 0.25rem;
     padding-inline-end: 0.25rem;
-    padding-inline-start: 0;
-
-    & + * {
-        margin: 0;
-    }
 }
 
+// TODO: Rename to label in 4.0
 .textfield-placeholder() {
     .transition(~'transform, font-size, color, letter-spacing');
     .text-overflow();
@@ -253,17 +244,33 @@
     display: flex;
     width: 1.5rem;
     height: 1.5rem;
-    margin: 0 0 0 0.25rem;
-    margin-inline-start: 0.25rem;
-    margin-inline-end: 0;
     align-items: center;
     justify-content: center;
     box-sizing: border-box;
     cursor: pointer;
+    pointer-events: none;
+}
+
+.input-icons() {
+    display: flex;
+    align-items: center;
+
+    :host[data-size='m'] & {
+        margin-inline-end: -0.125rem;
+    }
+
+    :host[data-size='s'] & {
+        margin-inline-end: -0.375rem;
+    }
+
+    :host:not([data-size='s']) & > :not(:first-child) {
+        margin-inline-start: 0.25rem;
+    }
 }
 
 .icon-button() {
     .input-icon();
+    pointer-events: auto;
 
     :host._readonly &,
     :host._disabled & {
@@ -296,21 +303,26 @@
         .icon-button();
     }
 
-    // @bad TODO: Refactor this and interactive icons together
     .t-icon {
         .input-icon();
-        pointer-events: none;
 
         &_left {
-            margin: 0 0.375rem 0 -0.25rem;
-            margin-inline-start: -0.25rem;
-            margin-inline-end: 0.375rem;
+            :host[data-size='s'] & {
+                margin-inline-start: -0.375rem;
+            }
+
+            :host[data-size='m'] & {
+                margin-inline-start: -0.125rem;
+                margin-inline-end: 0.375rem;
+            }
 
             :host[data-size='l'] & {
-                margin: 0 0.5rem 0 -0.25rem;
-                margin-inline-start: -0.25rem;
-                margin-inline-end: 0.5rem;
+                margin-inline-end: 0.75rem;
             }
         }
+    }
+
+    .t-icons {
+        .input-icons();
     }
 }
